Few little changes

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <h1>Charakterystyka sieci komputerowych</h1>
         <article class="flex-container for-definicja">
             <div>
-                <h2  style="margin-top: 0;">Definicja</h2>
+                <h2 style="margin-top: 0;">Definicja</h2>
                 <p>Sieć komputerowa (<em><b>z ang.</b> computer network</em>), układ komputerów i urządzeń końcowych
                     (<em><b>np.</b> drukarka</em>) połączonych między sobą szeregowymi łączami komunikacyjnymi,
                     umożliwiającymi wymianę komunikatów między poszczególnymi stanowiskami. Sieć komputerowa zapewnia
@@ -109,7 +109,8 @@
                 określonej stacji odbiorczej, każda z nich musi mieć swój adres odróżniający ją spośród innych stacji
                 zainstalowanych w sieci.</p>
 
-            <p><strong>Początki sieci komputerowej sięgają połowy lat sześćdziesiątych XX w.</strong> (<em>sieć
+            <p style="text-decoration: underline;"><strong>Początki sieci komputerowej sięgają połowy lat
+                    sześćdziesiątych XX w.</strong> (<em>sieć
                     ARPANET</em>).</p>
 
             <p>W zależności od odległości między komputerami rozróżnia się sieci lokalne, miejskie i rozległe. Szybkości
@@ -132,16 +133,17 @@
         <article>
             <div class="flex-container for-definicja">
                 <div>
-                    <h2>Główny komputer w sieci (serwer)</h2>
-                    <p>Głównym komputerem w sieci jest serwer. Spełnia on takie zadania jak: przechowywanie i odzyskiwanie
-                        plików, współdzielenie urządzeń sieciowych np.: drukarek, ploterów i innych, oraz zarządzanie całą
+                    <h2 id="h2serwer">Główny komputer w sieci (serwer)</h2>
+                    <p>Głównym komputerem w sieci jest serwer. Spełnia on takie zadania jak: przechowywanie i
+                        odzyskiwanie
+                        plików, współdzielenie urządzeń sieciowych np.: drukarek, ploterów i innych, oraz zarządzanie
+                        całą
                         siecią.</p>
                 </div>
                 <figure>
-                    <img src="images/serverpng.png" alt="Server">
-                    <figcaption style="text-align: right;">Serwer (<a
-                        href="https://www.pngegg.com/pl/png-ecpbs"
-                        target="_blank">Źródło</a>)</figcaption>
+                    <img src="images/serverpng2.png" alt="Server">
+                    <figcaption style="text-align: right;">Serwer (<a href="https://www.pngegg.com/pl/png-ecpbs"
+                            target="_blank">Źródło</a>)</figcaption>
                 </figure>
             </div>
             <p><u>Serwery</u> ze względu na spełnianą funkcję <u>można podzielić na</u>:</p>
@@ -225,26 +227,30 @@
                     <h3>Medium transmisyjne:</h3>
 
                     <table style="margin: auto;">
-                        <tr>
-                            <th>Sieci przewodowe</th>
-                            <th>Sieci bezprzewodowe</th>
-                        </tr>
-                        <tr>
-                            <td>
-                                <ul>
-                                    <li>kabel koncentryczny</li>
-                                    <li>skrętka</li>
-                                    <li>światłowód</li>
-                                </ul>
-                            </td>
-                            <td>
-                                <ul>
-                                    <li>radiowe</li>
-                                    <li>mikrofalowe</li>
-                                    <li>podczerwone</li>
-                                </ul>
-                            </td>
-                        </tr>
+                        <thead>
+                            <tr>
+                                <th>Sieci przewodowe</th>
+                                <th>Sieci bezprzewodowe</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <ul>
+                                        <li>kabel koncentryczny</li>
+                                        <li>skrętka</li>
+                                        <li>światłowód</li>
+                                    </ul>
+                                </td>
+                                <td>
+                                    <ul>
+                                        <li>radiowe</li>
+                                        <li>mikrofalowe</li>
+                                        <li>podczerwone</li>
+                                    </ul>
+                                </td>
+                            </tr>
+                        </tbody>
                     </table>
                 </section>
             </div>
